# coinswitch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: test.yaml
coinswitch/: base.py  constants.py  schemas.py  ticker.py
coinswitch/stubs/: base.pyi  ticker.pyi
tests/: conftest.py  test_base.py  test_ticker.py
